media-arr-movies/deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        media-node: "true"
      securityContext:
        fsGroup: 1000
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: movies
          persistentVolumeClaim:
            claimName: movies-nfs
