media-arr-movies/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        media-node: "true"
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - name: http
              containerPort: 8096
            - name: discovery
              containerPort: 7359
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /data/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: movies
          persistentVolumeClaim:
            claimName: movies-nfs
