media-arr-movies/deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        media-node: "true"
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-nfs
        - name: movies
          persistentVolumeClaim:
            claimName: movies-nfs
