media-arr-movies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-arr-movies
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878

    - host: jellyfin.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096

    - host: jellyseerr.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
